--- a/pgclient/system_test/Dockerfile
+++ b/pgclient/system_test/Dockerfile
@@ -1,12 +1,10 @@
-FROM postgresql
+FROM postgres
+MAINTAINER Maksim Ekimovskii <ekimovsky.maksim@gmail.com>
 
 # Default user is postgres
-ENV POSTGRES_PASSWORD: test
+# ENV POSTGRES_PASSWORD: test
 
 # This dir is supported by official postgresql image
-ENV PSQL_ENTRYPOINT /docker-entrypoint-initdb.d
+# ENV PSQL_ENTRYPOINT /docker-entrypoint-initdb.d
 
-MKDIR $PSQL_ENTRYPOINT
 RUN echo "CREATE DATABASE test WITH OWNER postgres;" >> $PSQL_ENTRYPOINT/create_db.sql
-
-#CMD python app.py
