--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 psycopg2==2.6.1
 
-# Python 2 to 3 compatibility
-six==1.9.0
-
 # System packages
 coverage==3.7.1
 bumpversion==0.5.3
-mock
+mock==1.3.0
+nose==1.3.7
