Fixed docker container pg database creation

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - sudo apt-get install -y python-dev libpq-dev
   - docker build -t pgclient/system_test pgclient/system_test
   - sudo service docker restart ; sleep 10
-  - docker run -d -p "0.0.0.0:15432:5432" -e POSTGRES_PORT=15432 -e POSTGRES_PASSWORD=test -e PSQL_ENTRYPOINT=/docker-entrypoint-initdb.d pgclient/system_test
+  - docker run -d -p "0.0.0.0:15432:5432" -e POSTGRES_PORT=15432 -e POSTGRES_PASSWORD=test pgclient/system_test
   - sleep 5
   - docker ps -a
 
