--- a/pgclient/system_test/Dockerfile
+++ b/pgclient/system_test/Dockerfile
@@ -7,4 +7,4 @@ MAINTAINER Maksim Ekimovskii <ekimovsky.maksim@gmail.com>
 # This dir is supported by official postgresql image
 # ENV PSQL_ENTRYPOINT /docker-entrypoint-initdb.d
 
-RUN echo "CREATE DATABASE test WITH OWNER postgres;" >> $PSQL_ENTRYPOINT/create_db.sql
+RUN echo "CREATE DATABASE test WITH OWNER postgres;" >> /docker-entrypoint-initdb.d/create_db.sql
