--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,27 +6,12 @@ postgresql:
     file: compose/common.yml
     service: postgresql_common
 
-# Older verions
+# Older versions
 postgresql_90:
-  image: postgres:9.0
+  container_name: pgclient_system
   ports:
     - "0.0.0.0:54390:5432"
-  extends:
-    file: compose/common.yml
-    service: postgresql_common
-
-postgresql_91:
-  image: postgres:9.1
-  ports:
-    - "0.0.0.0:54391:5432"
-  extends:
-    file: compose/common.yml
-    service: postgresql_common
-
-postgresql_92:
-  image: postgres:9.2
-  ports:
-    - "0.0.0.0:54392:5432"
+  dockerfile: Dockerfile.pg90
   extends:
     file: compose/common.yml
     service: postgresql_common
