Added extended exceptions handling, transform generic psycopg errors to more meaningful ones, updated tests, travis, Makefile

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ install:
   - pip install coveralls
 
 script:
+  - make test
   - make system_test
   # Run tests on postgres:9.0
   - export POSTGRES_PORT=54390
